Cambia ejemplo de foobar a rainbowify ;-)

--- a/01-browser-global-scripts/index.html
+++ b/01-browser-global-scripts/index.html
@@ -1,10 +1,14 @@
+<!DOCTYPE html>
 <html>
 
-<head></head>
+<head>
+  <script src="colors.js"></script>
+  <script src="main.js"></script>
+</head>
 
 <body>
-  <script src="my-mod.js"></script>
-  <script src="main.js"></script>
+  <h1>Hola mundo</h1>
+  <h2>Hola mundo</h2>
 </body>
 
 </html>
