--- a/03-browser-umd-global/index.html
+++ b/03-browser-umd-global/index.html
@@ -1,10 +1,14 @@
+<!DOCTYPE html>
 <html>
 
 <head></head>
 
 <body>
-  <script src="my-other-mod.js"></script>
-  <script src="my-mod.js"></script>
+  <h1>Hola mundo</h1>
+  <h2>Hola mundo</h2>
+
+  <script src="applyColors.js"></script>
+  <script src="colors.js"></script>
   <script src="main.js"></script>
 </body>
 
