--- a/05-browser-commonjs/index.html
+++ b/05-browser-commonjs/index.html
@@ -1,8 +1,11 @@
+<!DOCTYPE html>
 <html>
 
 <head></head>
 
 <body>
+  <h1>Hola mundo</h1>
+  <h2>Hola mundo</h2>
   <script src="https://requirejs.org/docs/release/2.3.6/minified/require.js"></script>
   <script src="main.js"></script>
 </body>
