--- a/09-es-modules/index.html
+++ b/09-es-modules/index.html
@@ -1,8 +1,11 @@
+<!DOCTYPE html>
 <html>
 
 <head></head>
 
 <body>
+  <h1>Hola mundo</h1>
+  <h2>Hola mundo</h2>
   <script type="module" src="main.js"></script>
 </body>
 
