--- a/08-browser-commonjs/index.html
+++ b/08-browser-commonjs/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 
-<head></head>
+<head>
+  <title>2011 (trabajo en CommonJS comenzó en 2009)</title>
+</head>
 
 <body>
   <h1>Hola mundo</h1>
