--- a/07-browser-umd-require/index.html
+++ b/07-browser-umd-require/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 
-<head></head>
+<head>
+  <title>2011</title>
+</head>
 
 <body>
   <h1>Hola mundo</h1>
   <h2>Hola mundo</h2>
-
-  <script src="applyColors.js"></script>
-  <script src="colors.js"></script>
+  <script src="https://requirejs.org/docs/release/2.3.6/minified/require.js"></script>
   <script src="main.js"></script>
 </body>
 
