Puliendo títulos de ejemplos...

--- a/02-browser-closures-global-exports/index.html
+++ b/02-browser-closures-global-exports/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>2001-2006: La era oscura</title>
+  <title>Clausuras / IIFE</title>
   <script src="colors.js"></script>
   <script src="main.js"></script>
 </head>
