--- a/03-jquery/index.html
+++ b/03-jquery/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>2006-2009: En busca de la luz</title>
+  <title>jQuery FTW</title>
   <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"></script>
   <script src="colors.js"></script>
   <script src="main.js"></script>
