--- a/08-browser-commonjs/index.html
+++ b/08-browser-commonjs/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>2011 (trabajo en CommonJS comenzó en 2009)</title>
+  <title>CommonJS + UMD + AMD + Require.js</title>
 </head>
 
 <body>
