--- a/01-browser-global-scripts/index.html
+++ b/01-browser-global-scripts/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>1995-2001: 1era guerra de los browsers</title>
+  <title>Todo global!!!</title>
   <script src="colors.js"></script>
   <script src="main.js"></script>
 </head>
